# forecastiso

./: .gitignore  Makefile  README.md  baseline_models_performance.md  pyproject.toml
forecastiso/: data_loader.py  evaluator.py  features.py  forecast_manager.py  forecaster.py  forecasters.py  utils.py
notebooks/: dev.ipynb  pipeline_validation_plots.ipynb  project.mplstyle  usage.ipynb
scripts/: build_dev_datasets.py  pipeline.py  pipeline_validation.py  validate_pipeline.py
tests/: test_data_loader.py
